required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version:
----------------

- Fix Getlegendgraphic when sizeunit is set

- Fix mapogcfilter.c not to cause syntax error if PROJ.4 is not compiled in (#2987)

Version 5.4.0 (2009-04-22):
---------------------------

Version 5.4.0-rc2 (2009-04-15):
-------------------------------

- Prevent from changing the connection type to MS_RASTER when
  setConnectionType(MS_WMS) is used (#2908)

- Fixed ANGLE FOLLOW code to return a "font not found" error when a TTF file
  is not found instead of silently producing a map with no label (#2974)

Version 5.4.0-rc1 (2009-04-08):
-------------------------------

- SWF: test missing when creating EllipseButtons (#2966)

- clean up GEOS init and cleanup functions (#2929) 

- Fixed writing of VALIDATION block in msSaveMap() (#2970)


Version 5.4.0-beta4 (2009-04-01):
---------------------------------

- Made sure computation of default symbol size is consistent with older 
  versions (#2963)

- Improved security relative to untrusted directories and mapfiles (RFC 56)

- Fixed several security issues found in an audit of the CGI application
  (#2939, #2941, #2942, #2943, #2944)

- setConnectionType(MS_WMS) doesn't work with mapscript (#2908)

- Properly reset filter/filteritem when queryByAttribute() fails (#2808)

- WMS GetImage and GetLegendGraphic formats should advertise AGG driver (#2957)

- PHP: add missing binding constant (#2949)

- SLD: Correct non validating SLD (#2915)

- Fixed problem with mode=nquery on connectiontype WFS layers (#2885)

Version 5.4.0-beta3 (2009-03-05):
---------------------------------

- SLD: Correct crash with large class names (#2915)

- Added Java MapScript WIN64 support (#2250)
